# CadExchangerTest

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: Circle.h  ConicSection.h  Curve.h  Ellipse.h  GeneralCircle.h  GeneralEllipse.h  Helix.h  Vect3d.h  ftCad.h
src/: CMakeLists.txt  Circle.cpp  ConicSection.cpp  Curve.cpp  Ellipse.cpp  GeneralCircle.cpp  GeneralEllipse.cpp  Helix.cpp  Vect3d.cpp
tests/: CMakeLists.txt  gtest_Circle.cpp  gtest_Ellipse.cpp  gtest_GeneralCircle.cpp  gtest_GeneralEllipse.cpp  gtest_Helix.cpp  gtest_Vect3d.cpp
